--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
