--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "mongoose": "^7.4.5",
     "socket.io": "^4.7.2"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
